[gd_scene load_steps=5 format=3 uid="uid://ke2oqvxlb7wy"]

[ext_resource type="Script" uid="uid://bugof36dl51dx" path="res://Scenes/Enemy Manager/enemy_manager.gd" id="1_g7cyy"]
[ext_resource type="PackedScene" uid="uid://csfw10w08i0co" path="res://Scenes/Enemies/skelly.tscn" id="2_nfqq7"]
[ext_resource type="PackedScene" uid="uid://deqvmeynk6rse" path="res://Scenes/Enemies/ghost.tscn" id="3_76oif"]
[ext_resource type="PackedScene" uid="uid://ckirv4ehdtd1v" path="res://Scenes/Enemies/brute.tscn" id="4_6a37f"]

[node name="EnemyManager" type="Node2D"]
script = ExtResource("1_g7cyy")
_skelly_scene = ExtResource("2_nfqq7")
_ghost_scene = ExtResource("3_76oif")
_brute_scene = ExtResource("4_6a37f")

[node name="Enemies" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="child_entered_tree" from="Enemies" to="." method="_on_enemies_child_entered_tree"]
